打包为docker镜像的Springboot项目构建

--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -8,3 +8,5 @@ include 'springcloud-rabbitmq.oldmoon-eureka-7001'
 include 'springcloud-rabbitmq.oldmoon-provider-8001'
 include 'springcloud-rabbitmq.oldmoon-provider-8002'
 include 'springcloud-rabbitmq.oldmoon-zuul-9704'
+include 'docker-springboot'
+
